# LLM-for-baby

./: .gitignore  main.py  pyproject.toml
LLM/: pretrain.py
Transformers/code/: Encoder.py  PositionEncoding.py  attention.py
src/Agent/: agent.ipynb  mcp_server.py
src/LLM/: rlhf.py  run.py  sft.py
src/Transformers/: Transformers.py
