[project]
name = "llm-for-baby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bilibili-api-python>=17.4.0",
    "datasets>=4.4.1",
    "mcp[cli]>=1.23.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "trl>=0.25.1",
]
